--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath1">
+      <img src="img/Jahnavi.jpg" alt="" class="lydia-dp" data-node-name="imagePath">
 <!--       <img src="img/lydia2.png" alt="" class="lydia-dp" data-node-name="imagePath2"> -->
 <!--       <img src="img/hat.svg" alt="" class="hat"> -->
       <div class="wish">
